--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Data with Dilani</title>  
+    <title>Satya's Data Universe: Discover, Analyze, Innovate</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
