--- a/index.html
+++ b/index.html
@@ -90,13 +90,16 @@
 <!-- Home Section -->
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/coding\ girl.gif')">
 		<div class="heading">
-			<h1>Hi! I'm Dilani Udugampola</h1>
+			<h1>Hi! I'm Satya</h1>
             <h2 style="color: white;">Passionate and result-driven</h2>
 			<h3 class="cd-headline clip is-full-width">
 				<span class="cd-words-wrapper">
-					<b class="is-visible">Data Analyst</b>
+					<b class="is-visible">Business Analyst</b>
 					<b>Data Scientist</b>
-					<b>Business Analyst</b>
+					<b>Data Engineer</b>
+					<b>Machine Learning Engineer</b>
+					<b>Product Manager</b>
+					<b>Program Manager</b>
 				</span>
 			</h3>
 		</div>
