--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- Social Media Links on the Left -->
         <div class="navbar-socials d-flex align-items-center">
-            <a href="https://www.linkedin.com/in/dilaniudugampola/" target="_blank" class="mr-3" style="color: white;">
+            <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
                 <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/Dilaniu" target="_blank" style="color: white;">
@@ -402,7 +402,7 @@
                 <div class="col-md-12">
                     <p class="footer-company-name">
                         All Rights Reserved. &copy; 
-                        <a href="#" style="color: white;">>Satya's Data Universe: Discover, Analyze, Innovate</a> Design By:
+                        <a href="#" style="color: white;">Satya's Data Universe: Discover, Analyze, Innovate</a> Design By:
                         <a href="https://html.design/" style="color: white;">Satya Sandeep Chintu</a>
                     </p>
                 </div>
