--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
                 <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="https://github.com/Dilaniu" target="_blank" style="color: white;">
+            <a href="https://github.com/sschintuz" target="_blank" style="color: white;">
                 <i class="fa fa-github fa-2x" aria-hidden="true"></i>
             </a>
         </div>
