--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/IMG_6528 (1).jpg" alt="" class="img-fluid img-rounded">
+                        <img src="CSS.png" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
