--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </nav>
 
 <!-- Home Section -->
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/code/coding.gif')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/code-coding.gif')">
 		<div class="heading">
 			<h1>Hi! I am Satya</h1>
             <h2 style="color: white;">Driven by passion, focused on results.</h2>
