--- a/index.html
+++ b/index.html
@@ -135,12 +135,32 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>About Satya.</h2>
-                        <p> Welcome to my little corner of the web! I'm excited to share my journey leveraging data to drive impact in business. </p>
-						<p>Satya Sandeep Chintu is distinguished by his strong foundation in business analytics and data science, with a particular focus on AI-oriented projects. He possesses a comprehensive skill set in programming, data analysis, and visualization, honed through advanced education and professional practice. His career includes significant roles in data analytics management and risk analysis across various organizations, where he effectively applied his analytical skills to solve complex business challenges. Additionally, Satya has demonstrated commendable leadership abilities, notably serving as the Director of Sustainability at Arizona State University. His blend of technical expertise and practical experience positions him as a valuable asset in the field of data science and AI.</p>
-                        <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
-                            <span>Download CV</span>
-                        </a>
+                        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Satya</title>
+</head>
+<body>
+    <h1>About Satya</h1>
+    <p>Welcome to my little corner of the web! I'm excited to share my journey leveraging data to drive impact in business.</p>
+    <h2>Introduction</h2>
+    <p>Satya Sandeep Chintu is distinguished by his strong foundation in business analytics and data science, with a particular focus on AI-oriented projects.</p>
+    <h2>Skill Set</h2>
+    <p>He possesses a comprehensive skill set in programming, data analysis, and visualization, honed through advanced education and professional practice.</p>
+    <h2>Career Highlights</h2>
+    <p>His career includes significant roles in data analytics management and risk analysis across various organizations, where he effectively applied his analytical skills to solve complex business challenges.</p>
+    <h2>Leadership</h2>
+    <p>Additionally, Satya has demonstrated commendable leadership abilities, notably serving as the Director of Sustainability at Arizona State University.</p>
+    <h2>Expertise</h2>
+    <p>His blend of technical expertise and practical experience positions him as a valuable asset in the field of data science and AI.</p>
+    <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
+        <span>Download CV</span>
+    </a>
+</body>
+</html>
+
                         
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
