--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="CSS.png" alt="" class="img-fluid img-rounded">
+                        <img src="CSSPicture.png" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -370,10 +370,7 @@
 			    </div>
 		    </div>
 	</div>
-	
-	
-
-    <div id="contact" class="section db">
+	    <div id="contact" class="section db">
         <div class="container">
             <div class="section-title text-left">
                 <h3>Contact</h3>
@@ -422,7 +419,7 @@
                 <div class="col-md-12">
                     <p class="footer-company-name">
                         All Rights Reserved. &copy; 
-                        <a href="#" style="color: white;">Satya's Data Universe: Discover, Analyze, Innovate</a> Design By:
+                        <a href="#" style="color: white;">Satya's Data Universe</a> Design By:
                         <a href="https://html.design/" style="color: white;">Satya Sandeep Chintu</a>
                     </p>
                 </div>
