--- a/index.html
+++ b/index.html
@@ -140,10 +140,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html>
+<html>
+<head>
     <title>About Satya</title>
+    <style>
+        body {
+            color: #000; /* Set text color to dark */
+            font-weight: bold; /* Set font weight to bold */
+        }
+    </style>
 </head>
 <body>
-    <h1>About Satya</h1>
+    <h1>ABOUT SATYA</h1>
     <p>Welcome to my little corner of the web! I'm excited to share my journey leveraging data to drive impact in business.</p>
     <h2>Introduction</h2>
     <p>Satya Sandeep Chintu is distinguished by his strong foundation in business analytics and data science, with a particular focus on AI-oriented projects.</p>
