--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Satya</title>
+    <title>ABOUT SATYA</title>
     <style>
         body {
             color: #000; /* Set text color to dark */
