--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT SATYA</title>
     <style>
         body {
@@ -168,7 +170,6 @@
     </a>
 </body>
 </html>
-
                         
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
