--- a/index.html
+++ b/index.html
@@ -155,7 +155,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT SATYA</title>
+    <style>
+        body {
+            color: #000; /* Set text color to dark */
+            font-weight: bold; /* Set font weight to bold */
+        }
+    </style>
 </head>
 <body>
     <p>Welcome to this little corner of the web! Excited to share the journey leveraging data to drive impact in business.</p>
