--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     </style>
 </head>
 <body>
+    <h1>ABOUT ME</h1>
     <p>Welcome to this little corner of the web! Excited to share the journey leveraging data to drive impact in business.</p>
     <h2>Introduction</h2>
     <p>Satya Sandeep Chintu is distinguished by a strong foundation in business analytics and data science, with a particular focus on AI-oriented projects.</p>
@@ -182,6 +183,7 @@
     </a>
 </body>
 </html>
+
 
                         
                     </div><!-- end messagebox -->
