--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Data with Dilani</title>  
+    <title>Satya Crafts. Codes. Creates</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -51,7 +51,7 @@
 
         <!-- Social Media Links on the Left -->
         <div class="navbar-socials d-flex align-items-center">
-            <a href="https://www.linkedin.com/in/dilaniudugampola/" target="_blank" class="mr-3" style="color: white;">
+            <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
                 <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/sschintuz" target="_blank" style="color: white;">
