--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
-                <div class="col-md-6">
-                    <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
-                    </div><!-- end media -->
-                </div><!-- end col -->
+		 <div class="col-md-6">
+    <div class="right-box-pro wow fadeIn text-right"> <!-- Add the text-right class -->
+        <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
+    </div><!-- end media -->
+</div><!-- end col -->
+   
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->	
@@ -380,7 +381,7 @@
     
                         <!-- Email -->
                         <h3>Email</h3>
-                        <p style="color: black;"><a href="mailto:schintu@asu.edu" style="color: black;">dilaniu.95@gmail.com</a></p>
+                        <p style="color: black;"><a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a></p>
     
                         <!-- Location -->
                         <h3>Location</h3>
