--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
 						<button data-filter=".gal_a">Machine Learning</button>
 						<button data-filter=".gal_b">Natural Language Processing</button>
                         <button data-filter=".gal_c">Tableau</button>
+						<button data-filter=".gal_c">Power BI</button>
+						<button data-filter=".gal_c">Financial Modeling</button>
+						<button data-filter=".gal_c">Tableau</button>
                         <button data-filter=".gal_d">Computer Vision</button>
 
 					</div>
