--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </nav>
 
 <!-- Home Section -->
-	<section id="home" class="main-banner parallaxie" style="background: url('images/5DPI.gif')">
+	<section id="home" class="main-banner parallaxie" style="background: url('BPic.Jpeg')">
 		<div class="heading">
 			<h1>Hi! I am SATYA</h1>
             <h2 style="color: white;">Passionate and result-driven</h2>
