--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
 				<div class="col-md-12">
 					<div class="button-group filter-button-group text-left">
 						<button class="active" data-filter="*">All</button>
+						<button data-filter=".gal_c">Business Analysis</button>
 						<button data-filter=".gal_a">Machine Learning</button>
 						<button data-filter=".gal_b">Natural Language Processing</button>
-                        <button data-filter=".gal_c">Tableau</button>
 						<button data-filter=".gal_c">Power BI</button>
 						<button data-filter=".gal_c">Tableau</button>
-                        <button data-filter=".gal_d">Computer Vision</button>
+                                                <button data-filter=".gal_d">Computer Vision</button>
 						<button data-filter=".gal_c">Financial Modeling</button>
 
 					</div>
