--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Projects</h3>
-                <p>Here is a compilation of projects I've undertaken both as part of my academic coursework and during my personal time.</p>
+                <p>Here is a compilation of projects I've undertaken both Academic and Self Initiated</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -196,13 +196,13 @@
                 <div class="col-md-4 col-sm-6 gallery-grid gal_a">
                     <div class="gallery-single fix">
                         <!-- Image linking to GitHub repository -->
-                        <a href="https://github.com/Dilaniu/A-B-Testing-_Hypothesis_testing" target="_blank">
-                            <img src="uploads/cookie cat.jpeg" class="img-fluid" alt="Image">
+                        <a href="https://github.com/sschintuz/CookieCat-A-slash-B-Testing" target="_blank">
+                            <img src="uploads/CookieCats.jpeg" class="img-fluid" alt="Image">
                         </a>
                         
                         <!-- Overlay can be removed or repurposed -->
                         <div class="img-overlay">
-                            <a href="https://github.com/Dilaniu/A-B-Testing-_Hypothesis_testing" class="hoverbutton global-radius" target="_blank">
+                            <a href="https://github.com/sschintuz/CookieCat-A-slash-B-Testing" class="hoverbutton global-radius" target="_blank">
                                 <i class="fa fa-github"></i> <!-- changed from fa-picture-o to fa-github to represent GitHub -->
                             </a>
                         </div>
