--- a/index.html
+++ b/index.html
@@ -88,22 +88,23 @@
 </nav>
 
 <!-- Home Section -->
-	<section id="home" class="main-banner parallaxie" style="background: url('codegif.gif')">
-		<div class="heading">
-			<h1>Hi! I am SATYA</h1>
-            <h2 style="color: white;">Passionate and result-driven</h2>
-			<h3 class="cd-headline clip is-full-width">
-				<span class="cd-words-wrapper">
-					<b class="is-visible">Data Analyst</b>
-					<b>Business Analyst</b>
-					<b>Data Scientist</b>					
-                    <b>Machine Learning Engineer</b>
-                    <b>Product Manager</b>
-                    <b>Program Manager</b>
-				</span>
-			</h3>
-		</div>
-	</section>
+<section id="home" class="main-banner parallaxie" style="background-image: url('codegif.gif'); background-size: cover; background-position: center;">
+    <div class="heading">
+        <h1>Hi! I am SATYA</h1>
+        <h2 style="color: white;">Passionate and result-driven</h2>
+        <h3 class="cd-headline clip is-full-width">
+            <span class="cd-words-wrapper">
+                <b class="is-visible">Data Analyst</b>
+                <b>Business Analyst</b>
+                <b>Data Scientist</b>					
+                <b>Machine Learning Engineer</b>
+                <b>Product Manager</b>
+                <b>Program Manager</b>
+            </span>
+        </h3>
+    </div>
+</section>
+
 
 	<svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 85 100" preserveAspectRatio="none">
         <path d="M-5 100 Q 0 20 5 100 Z
