--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 style="color: white;">Passionate and result-driven</h2>
         <h3 class="cd-headline clip is-full-width">
             <span class="cd-words-wrapper">
-                <b class="is-visible">
+                <b class="is-visible">Data Analyst</b>
                 <b>Business Analyst</b>
                 <b>Data Scientist</b>					
                 <b>Machine Learning Engineer</b>
