--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Satya Crafts</title>  
+    <title>Data with Dilani</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/S.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -51,10 +51,10 @@
 
         <!-- Social Media Links on the Left -->
         <div class="navbar-socials d-flex align-items-center">
-            <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
+            <a href="https://www.linkedin.com/in/dilaniudugampola/" target="_blank" class="mr-3" style="color: white;">
                 <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="https://github.com/sschintuz" target="_blank" style="color: white;">
+            <a href="https://github.com/Dilaniu" target="_blank" style="color: white;">
                 <i class="fa fa-github fa-2x" aria-hidden="true"></i>
             </a>
         </div>
@@ -86,6 +86,24 @@
         </div>
     </div>
 </nav>
+
+<!-- Home Section -->
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/coding\ girl.gif')">
+		<div class="heading">
+			<h1>Hi! I'm Dilani Udugampola</h1>
+            <h2 style="color: white;">Passionate and result-driven</h2>
+			<h3 class="cd-headline clip is-full-width">
+				<span class="cd-words-wrapper">
+					<b class="is-visible">Data Analyst</b>
+					 <b>Business Analyst</b>
+                                         <b>Data Scientist</b>					
+                                         <b>Machine Learning Engineer</b>
+                                         <b>Product Manager</b>
+                                         <b>Program Manager</b>
+				</span>
+			</h3>
+		</div>
+	</section>
 
 <!-- Home Section -->
 <section id="home" class="main-banner parallaxie" style="background-image: url('codegif.gif'); background-size: cover; background-position: center;">
