--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div class="col-md-4 col-sm-6 gallery-grid gal_c">
                     <div class="gallery-single fix">
                         <!-- Image linking to GitHub repository -->
-                        <a href="https://public.tableau.com/app/profile/dilani.udugampola/viz/SP500dashboard/IndustryDashboard" target="_blank">
+                        <a href="https://public.tableau.com/app/profile/sschintu/viz/SP500dashboard/IndustryDashboard" target="_blank">
                             <img src="uploads/s&p 500 .jpeg" class="img-fluid" alt="Image">
                         </a>
                         
