--- a/index.html
+++ b/index.html
@@ -49,15 +49,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
 
-        <!-- Social Media Links on the Left -->
-        <div class="navbar-socials d-flex align-items-center">
-            <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
-                <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="https://github.com/sschintuz" target="_blank" style="color: white;">
-                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-            </a>
-        </div>
+   <!-- Social Media Links on the Left -->
+<div class="navbar-socials d-flex align-items-center">
+    <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
+        <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+    </a>
+    <a href="https://github.com/sschintuz" target="_blank" class="mr-3" style="color: white;">
+        <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+    </a>
+    <a href="https://medium.com/@schintu" target="_blank" style="color: white;">
+        <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+    </a>
+</div>
 
 
         <!-- Brand and Toggler -->
@@ -99,7 +102,6 @@
                                          <b>Data Scientist</b>					
                                          <b>Machine Learning Engineer</b>
                                          <b>Product Manager</b>
-                                         <b>Program Manager</b>
 				</span>
 			</h3>
 		</div>
