--- a/index.html
+++ b/index.html
@@ -132,40 +132,35 @@
             M95 100 Q 100 15 105 100 Z">
         </path>
     </svg>
+<div id="about" class="section wb">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="message-box">                        
+                    <h2>About Me</h2>
+                    <p>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, PowerBI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</p>
+                    <p>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</p>
+                    <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
+                        <span>Download CV</span>
+                    </a>
+                </div><!-- end messagebox -->
+            </div><!-- end col -->
 
-    <div id="about" class="section wb">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="message-box">                        
-                        <h3>About Me</h3>
+            <div class="col-md-6">
+                <div class="right-box-pro wow fadeIn">
+                    <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
+                </div><!-- end media -->
+            </div><!-- end col -->
+        </div><!-- end row -->
+    </div><!-- end container -->
+</div><!-- end section -->	
 
-<p>
-  With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, PowerBI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency. My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.
-</p>
-
-                        <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
-                            <span>Download CV</span>
-                        </a>
-                        
-                    </div><!-- end messagebox -->
-                </div><!-- end col -->
-
-		 <div class="col-md-6">
-    <div class="right-box-pro wow fadeIn text-right"> <!-- Add the text-right class -->
-        <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
-    </div><!-- end media -->
-</div><!-- end col -->
-   
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->	
-	<div id="portfolio" class="section lb">
-		<div class="container">
-			<div class="section-title text-left">
-                <h3>Projects</h3>
-                <p>Here is a collection of projects I have completed, encompassing both academic and self-initiated endeavors.</p>
-            </div><!-- end title -->
+<div id="portfolio" class="section lb">
+    <div class="container">
+        <div class="section-title text-left">
+            <h3>Projects</h3>
+            <p>Here is a collection of projects I have completed, encompassing both academic and self-initiated endeavors.</p>
+        </div><!-- end title -->
 			
 			<div class="gallery-menu row">
 				<div class="col-md-12">
