--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     
                         <!-- Email -->
                         <h3>Email</h3>
-                        <p style="color: black;"><a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a></p>
+                        <p style="color: black;"><a href="mailto:schintu@asu.edu/csschintu9@gmail.com" style="color: black;">schintu@asu.edu</a></p>
     
                         <!-- Location -->
                         <h3>Location</h3>
