--- a/index.html
+++ b/index.html
@@ -370,11 +370,14 @@
                 <div class="contact_info">
 
                     <!-- Email -->
-                    <h3>Email</h3>
-                    <p style="color: black;">
-                        <a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a><br>
-                        <a href="mailto:csschintu9@gmail.com" style="color: black;">csschintu9@gmail.com</a>
-                    </p>
+<h3>Email</h3>
+<p style="color: black;">
+    <a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a>
+</p>
+<p style="color: black;">
+    <a href="mailto:csschintu9@gmail.com" style="color: black;">csschintu9@gmail.com</a>
+</p>
+
 
                     <!-- Location -->
                     <h3>Location</h3>
