--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="col-md-12">
 					<div class="button-group filter-button-group text-left">
 						<button class="active" data-filter="*">All</button>
-						<button data-filter=".gal_c">Business Analysis</button>
+						<button data-filter=".gal_c">Data & Business Analysis</button>
 						<button data-filter=".gal_a">Data Science & Machine Learning</button>
 						<button data-filter=".gal_b">Natural Language Processing</button>
 						<button data-filter=".gal_c">Deep Learning</button>
@@ -370,13 +370,13 @@
                 <div class="contact_info">
 
                     <!-- Email -->
-<h3>Email</h3>
-<p style="color: black;">
-    <a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a>
-</p>
-<p style="color: black;">
-    <a href="mailto:csschintu9@gmail.com" style="color: black;">csschintu9@gmail.com</a>
-</p>
+		     <h3>Email</h3>
+                     <p style="color: black;">
+                     <a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a>
+                     </p>
+                     <p style="color: black;">
+                    <a href="mailto:csschintu9@gmail.com" style="color: black;">csschintu9@gmail.com</a>
+                     </p>
 
 
                     <!-- Location -->
