--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </nav>
 
 <!-- Home Section -->
-<section id="home" class="main-banner parallaxie" style="background: url('GitGif.gif')">
+<section id="home" class="main-banner parallaxie" style="background: url('uploads/GitGif.gif')">
     <div class="heading">
         <h1>Hi! I'm Satya</h1>
         <h2 style="color: white;">Passionate and result-driven</h2>
@@ -105,6 +105,7 @@
         </h3>
     </div>
 </section>
+
 
 
 
