--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 						<button data-filter=".gal_c">Data & Business Analysis</button>
 						<button data-filter=".gal_a">Data Science & Machine Learning</button>
 						<button data-filter=".gal_b">Natural Language Processing</button>
-						<button data-filter=".gal_c">Deep Learning</button>
-                                                <button data-filter=".gal_d">Computer Vision</button>
+						<button data-filter=".gal_c">Deep Learning & Computer Vision</button>
 						<button data-filter=".gal_c">Financial Modeling</button>
 						<button data-filter=".gal_c">Business Intelligence</button>
 						
