--- a/index.html
+++ b/index.html
@@ -91,22 +91,21 @@
 </nav>
 
 <!-- Home Section -->
-<section id="home" class="main-banner parallaxie" style="background: url('uploads/GitGif1.gif') no-repeat center center; background-size: cover;">
+<section id="home" class="main-banner parallaxie" style="background: url('uploads/GitGif1.gif')">
     <div class="heading">
         <h1>Hi! I'm Satya</h1>
         <h2 style="color: white;">Passionate and result-driven</h2>
         <h3 class="cd-headline clip is-full-width">
-            <span>
-                <span class="cd-words-wrapper">
-                    <b class="is-visible">Business Analyst</b>
-                    <b>Data Scientist</b>
-                    <b>Machine Learning Engineer</b>
-                    <b>Product Manager</b>
-                </span>
+            <span class="cd-words-wrapper">
+                <b class="is-visible">Business Analyst</b>
+                <b>Data Scientist</b>
+                <b>Machine Learning Engineer</b>
+                <b>Product Manager</b>
             </span>
         </h3>
     </div>
 </section>
+
 
 
 
