--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 				<div class="col-md-12">
 					<div class="button-group filter-button-group text-left">
 						<button class="active" data-filter="*">All</button>
-						<button data-filter=".gal_c">Data & Business Analysis</button>
+						<button data-filter=".gal_c">Business & Data Analysis</button>
 						<button data-filter=".gal_a">Data Science & Machine Learning</button>
 						<button data-filter=".gal_b">Natural Language Processing</button>
 						<button data-filter=".gal_c">Deep Learning & Computer Vision</button>
-						<button data-filter=".gal_c">Financial Modeling</button>
+						<button data-filter=".gal_c">Credit & Quantitative Risk Modeling</button>
 						<button data-filter=".gal_c">Business Intelligence</button>
 						
 
