--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<button class="active" data-filter="*">All</button>
 						<button data-filter=".gal_c">Business & Data Analysis</button>
 						<button data-filter=".gal_a">Data Science & Machine Learning</button>
-						<button data-filter=".gal_b">Natural Language Processing</button>
+						<button data-filter=".gal_b">NLP</button>
 						<button data-filter=".gal_c">Deep Learning & Computer Vision</button>
 						<button data-filter=".gal_c">Credit & Quantitative Risk Modeling</button>
 						<button data-filter=".gal_c">Business Intelligence</button>
