--- a/index.html
+++ b/index.html
@@ -375,20 +375,20 @@
                     <!-- Email -->
 		     <h3>Email</h3>
                      <p style="color: black;">
-                     <a href="mailto:schintu@asu.edu" style="color: black;">schintu@asu.edu</a>
+                     <a href="mailto:schintu@asu.edu" style="color: RED;">schintu@asu.edu</a>
                      </p>
                      <p style="color: black;">
-                    <a href="mailto:csschintu9@gmail.com" style="color: black;">csschintu9@gmail.com</a>
+                    <a href="mailto:csschintu9@gmail.com" style="color: RED;">csschintu9@gmail.com</a>
                      </p>
 
 
                     <!-- Location -->
                     <h3>Location</h3>
-                    <p style="color: black;">Tempe, AZ 85288</p>
+                    <p style="color: RED;">Tempe, AZ 85288</p>
 
                     <!-- Phone -->
                     <h3>Phone</h3>
-                    <p style="color: black;"><a href="tel:(602) 565-5813">(602) 565-5813</a></p>
+                    <p style="color: RED;"><a href="tel:(602) 565-5813">(602) 565-5813</a></p>
 
     
                     <!-- Socials -->
