--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
 	</div>
 	
 	
-
-    <div id="contact" class="section db">
+<div id="contact" class="section db">
     <div class="container">
         <div class="section-title text-left">
             <h3>Contact</h3>
@@ -373,47 +372,46 @@
                 <div class="contact_info">
 
                     <!-- Email -->
-		     <h3>Email</h3>
-                     <p style="color: black;">
-                     <a href="mailto:schintu@asu.edu" style="color: RED;">schintu@asu.edu</a>
-                     </p>
-                     <p style="color: black;">
-                    <a href="mailto:csschintu9@gmail.com" style="color: RED;">csschintu9@gmail.com</a>
-                     </p>
-
+                    <h3>Email</h3>
+                    <p>
+                        <a href="mailto:schintu@asu.edu" class="contact-text">schintu@asu.edu</a>
+                    </p>
+                    <p>
+                        <a href="mailto:csschintu9@gmail.com" class="contact-text">csschintu9@gmail.com</a>
+                    </p>
 
                     <!-- Location -->
                     <h3>Location</h3>
-                    <p style="color: RED;">Tempe, AZ 85288</p>
+                    <p class="contact-text">Tempe, AZ 85288</p>
 
                     <!-- Phone -->
                     <h3>Phone</h3>
-                    <p style="color: RED;"><a href="tel:(602) 565-5813">(602) 565-5813</a></p>
+                    <p><a href="tel:(602) 565-5813" class="contact-text">(602) 565-5813</a></p>
 
-    
                     <!-- Socials -->
-<h3>Socials</h3>
-<div>
-    <!-- LinkedIn -->
-    <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3">
-        <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
-    </a>
+                    <h3>Socials</h3>
+                    <div class="social-icons">
+                        <!-- LinkedIn -->
+                        <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3">
+                            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+                        </a>
 
-    <!-- GitHub -->
-    <a href="https://github.com/sschintuz" target="_blank" class="mr-3">
-        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
-    </a>
+                        <!-- GitHub -->
+                        <a href="https://github.com/sschintuz" target="_blank" class="mr-3">
+                            <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        </a>
 
-    <!-- Medium -->
-    <a href="https://medium.com/@schintu" target="_blank">
-        <i class="fa fa-medium fa-3x" aria-hidden="true"></i>
-    </a>
-</div>
-</div>
-</div>
-</div>
-</div>
+                        <!-- Medium -->
+                        <a href="https://medium.com/@schintu" target="_blank">
+                            <i class="fa fa-medium fa-3x" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div><!-- end contact section -->
+
 
 <!-- Footer -->
 <div class="footer">
