--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 <div id="contact" class="section db">
     <div class="container">
         <div class="section-title text-left">
-            <h3>Contact</h3>
-            <p>Feel free to contact me about exciting opportunities or any questions regarding my projects!</p>
+            <h3 style="color: red;">Contact</h3>
+            <p style="color: red;">Feel free to contact me!</p>
         </div><!-- end title -->
 
         <div class="row">
@@ -372,37 +372,37 @@
                 <div class="contact_info">
 
                     <!-- Email -->
-                    <h3>Email</h3>
-                    <p>
-                        <a href="mailto:schintu@asu.edu" class="contact-text">schintu@asu.edu</a>
+                    <h3 style="color: red;">Email</h3>
+                    <p style="color: red;">
+                        <a href="mailto:schintu@asu.edu" style="color: red;">schintu@asu.edu</a>
                     </p>
-                    <p>
-                        <a href="mailto:csschintu9@gmail.com" class="contact-text">csschintu9@gmail.com</a>
+                    <p style="color: red;">
+                        <a href="mailto:csschintu9@gmail.com" style="color: red;">csschintu9@gmail.com</a>
                     </p>
 
                     <!-- Location -->
-                    <h3>Location</h3>
-                    <p class="contact-text">Tempe, AZ 85288</p>
+                    <h3 style="color: red;">Location</h3>
+                    <p style="color: red;">Tempe, AZ 85288</p>
 
                     <!-- Phone -->
-                    <h3>Phone</h3>
-                    <p><a href="tel:(602) 565-5813" class="contact-text">(602) 565-5813</a></p>
+                    <h3 style="color: red;">Phone</h3>
+                    <p style="color: red;"><a href="tel:(602) 565-5813" style="color: red;">(602) 565-5813</a></p>
 
                     <!-- Socials -->
-                    <h3>Socials</h3>
-                    <div class="social-icons">
+                    <h3 style="color: red;">Socials</h3>
+                    <div>
                         <!-- LinkedIn -->
-                        <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3">
+                        <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: red;">
                             <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
                         </a>
 
                         <!-- GitHub -->
-                        <a href="https://github.com/sschintuz" target="_blank" class="mr-3">
+                        <a href="https://github.com/sschintuz" target="_blank" class="mr-3" style="color: red;">
                             <i class="fa fa-github fa-3x" aria-hidden="true"></i>
                         </a>
 
                         <!-- Medium -->
-                        <a href="https://medium.com/@schintu" target="_blank">
+                        <a href="https://medium.com/@schintu" target="_blank" style="color: red;">
                             <i class="fa fa-medium fa-3x" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -411,7 +411,6 @@
         </div>
     </div>
 </div><!-- end contact section -->
-
 
 <!-- Footer -->
 <div class="footer">
