--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <div id="contact" class="section db">
     <div class="container">
         <div class="section-title text-left">
-            <h3 style="color: red;">Contact</h3>
+            <h3 style="color: white;">Contact</h3>
             <p style="color: red;">Feel free to contact me!</p>
         </div><!-- end title -->
 
@@ -372,7 +372,7 @@
                 <div class="contact_info">
 
                     <!-- Email -->
-                    <h3 style="color: red;">Email</h3>
+                    <h3 style="color: white;">Email</h3>
                     <p style="color: red;">
                         <a href="mailto:schintu@asu.edu" style="color: red;">schintu@asu.edu</a>
                     </p>
@@ -381,15 +381,15 @@
                     </p>
 
                     <!-- Location -->
-                    <h3 style="color: red;">Location</h3>
+                    <h3 style="color: white;">Location</h3>
                     <p style="color: red;">Tempe, AZ 85288</p>
 
                     <!-- Phone -->
-                    <h3 style="color: red;">Phone</h3>
+                    <h3 style="color: white;">Phone</h3>
                     <p style="color: red;"><a href="tel:(602) 565-5813" style="color: red;">(602) 565-5813</a></p>
 
                     <!-- Socials -->
-                    <h3 style="color: red;">Socials</h3>
+                    <h3 style="color: white;">Socials</h3>
                     <div>
                         <!-- LinkedIn -->
                         <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: red;">
