--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 
    <!-- Social Media Links on the Left -->
 <div class="navbar-socials d-flex align-items-center">
-    <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: white;">
+    <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: red;">
         <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
     </a>
-    <a href="https://github.com/sschintuz" target="_blank" class="mr-3" style="color: white;">
+    <a href="https://github.com/sschintuz" target="_blank" class="mr-3" style="color: red;">
         <i class="fa fa-github fa-2x" aria-hidden="true"></i>
     </a>
-    <a href="https://medium.com/@schintu" target="_blank" style="color: white;">
+    <a href="https://medium.com/@schintu" target="_blank" style="color: red;">
         <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
     </a>
 </div>
@@ -419,8 +419,8 @@
             <div class="col-md-12">
                 <p class="footer-company-name">
                     All Rights Reserved. &copy; 
-                    <a href="#" style="color: white;">Satya's Data Universe</a> Design By:
-                    <a href="https://html.design/" style="color: white;">Satya Sandeep Chintu</a>
+                    <a href="#" style="color: red;">Satya's Data Universe</a> Design By:
+                    <a href="https://html.design/" style="color: red;">Satya Sandeep Chintu</a>
                 </p>
             </div>
         </div>
