--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
 
 <a href=" https://github.com/sschintuz/Risk-ResiliencyDashboard-PowerBI-" target="_blank">
-                            <img src="uploads/Supplychain.png" class="img-fluid" alt="Image">
+                            <img src="uploads/Supplychain.jpg" class="img-fluid" alt="Image">
                         </a>
                         
                         <!-- Overlay can be removed or repurposed -->
