--- a/index.html
+++ b/index.html
@@ -134,4 +134,6 @@
                     <figcaption class="mt-2 text-center"><strong>Top Youtube Channels Analysis Dashboard</strong></figcaption>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 gallery-grid gal
+        </div><!-- end gallery -->
+    </div><!-- end container -->
+</div><!-- end section -->
